--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-      python-version: ['3.10', '3.11']
+        python-version: ['3.10', '3.11']
     steps:
       - uses: actions/checkout@v3
-      - name: Setup Python ${{ matrix.python-version }}
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
@@ -27,7 +27,7 @@ jobs:
       - name: Lint with Flake8
         run: |
           source .venv/bin/activate
-          flake8 src scripts tests
+          flake8 src tests
       - name: Run tests
         run: |
           source .venv/bin/activate
