--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Lint with Flake8
         run: |
           source .venv/bin/activate
-          flake8 src tests
+          python -m flake8 src tests
       - name: Run tests
         run: |
           source .venv/bin/activate
-          pytest --maxfail=1 --disable-warnings -q
+          python -m pytest --maxfail=1 --disable-warnings -q
