--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -19,18 +19,21 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
+        shell: pwsh
         run: |
           python -m venv .venv
-          source .venv/bin/activate
+          .\.venv\Scripts\Activate.ps1
           pip install --upgrade pip
           pip install -r requirements.txt
       - name: Lint with Flake8
+        shell: pwsh
         run: |
-          source .venv/bin/activate
+          .\.venv\Scripts\Activate.ps1
           pip install flake8
           flake8 src tests
       - name: Run tests
+        shell: pwsh
         run: |
-          source .venv/bin/activate
+          .\.venv\Scripts\Activate.ps1
           pip install pytest
           pytest --maxfail=1 --disable-warnings -q
