--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -1,4 +1,4 @@
-name: Python CI
+name: CI
 
 on:
   push:
@@ -7,17 +7,24 @@ on:
     branches: [ main ]
 
 jobs:
-  build-test:
+  build:
     runs-on: windows-latest
-    strategy:
-      matrix:
-        python-version: ['3.10', '3.11']
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Debug
+        shell: pwsh
+        run: |
+          echo "GITHUB_WORKSPACE = $env:GITHUB_WORKSPACE"
+          ls -Recurse
+
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.11'
+
       - name: Install dependencies
         shell: pwsh
         run: |
@@ -25,15 +32,15 @@ jobs:
           .\.venv\Scripts\Activate.ps1
           pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Lint with Flake8
         shell: pwsh
         run: |
           .\.venv\Scripts\Activate.ps1
-          pip install flake8
           flake8 src tests
+
       - name: Run tests
         shell: pwsh
         run: |
           .\.venv\Scripts\Activate.ps1
-          pip install pytest
           pytest --maxfail=1 --disable-warnings -q
