--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Python-CI
 
 on:
   push:
@@ -9,39 +9,39 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    env:
+      PYTHONUTF8: 1
+      PYTHONLEGACYWINDOWSSTDIO: utf-8
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4  # Updated to v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+    - name: Setup Python
+      uses: actions/setup-python@v5  # Updated to v5
+      with:
+        python-version: '3.11'
 
-      - name: Install dependencies
-        shell: pwsh
-        run: |
-          python -m venv .venv
-          .\.venv\Scripts\Activate.ps1
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
+    - name: Create and activate venv
+      shell: pwsh
+      run: |
+        python -m venv .venv
+        Set-ExecutionPolicy Bypass -Scope Process -Force
+        .\.venv\Scripts\Activate.ps1
 
-      - name: Debug
-        shell: pwsh
-        run: |
-          .\.venv\Scripts\Activate.ps1
-          echo "PATH = $env:PATH"
-          Get-Command python, flake8, pytest
+    - name: Install dependencies
+      shell: pwsh
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Lint with Flake8
-        shell: pwsh
-        run: |
-          .\.venv\Scripts\Activate.ps1
-          python -m flake8 src tests
+    - name: Add venv to PATH
+      shell: pwsh
+      run: |
+        echo "$env:GITHUB_WORKSPACE\.venv\Scripts" >> $env:GITHUB_PATH
 
-      - name: Run tests
-        shell: pwsh
-        run: |
-          .\.venv\Scripts\Activate.ps1
-          python -m pytest --maxfail=1 --disable-warnings -q
+    - name: Run Linter
+      run: flake8 src tests
+
+    - name: Run Tests
+      run: pytest --maxfail=1 --disable-warnings
