--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -10,38 +10,41 @@ jobs:
   build:
     runs-on: windows-latest
     env:
-      PYTHONUTF8: 1
-      PYTHONLEGACYWINDOWSSTDIO: utf-8
+      PYTHONUTF8: 1  # Fixes Unicode issues on Windows
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4  # Updated to v4
+      uses: actions/checkout@v4
 
     - name: Setup Python
-      uses: actions/setup-python@v5  # Updated to v5
+      uses: actions/setup-python@v5
       with:
         python-version: '3.11'
 
-    - name: Create and activate venv
+    - name: Create venv
       shell: pwsh
       run: |
         python -m venv .venv
-        Set-ExecutionPolicy Bypass -Scope Process -Force
-        .\.venv\Scripts\Activate.ps1
+        # Permanently add venv to PATH
+        $venvPath = "$env:GITHUB_WORKSPACE\.venv\Scripts"
+        echo "$venvPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
     - name: Install dependencies
       shell: pwsh
       run: |
-        python -m pip install --upgrade pip
+        pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Add venv to PATH
+    - name: Verify installations
       shell: pwsh
       run: |
-        echo "$env:GITHUB_WORKSPACE\.venv\Scripts" >> $env:GITHUB_PATH
+        where.exe flake8
+        where.exe pytest
 
     - name: Run Linter
-      run: flake8 src tests
+      shell: pwsh
+      run: flake8 src tests  # Now works without activation
 
     - name: Run Tests
+      shell: pwsh
       run: pytest --maxfail=1 --disable-warnings
