--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -9,55 +9,33 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    env:
-      PYTHONUTF8: 
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Setup Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
-    - name: Create virtual environment
-      shell: pwsh
-      run: |
-        python -m venv .venv
-        # Verify venv creation
-        if (-not (Test-Path .\.venv\Scripts\python.exe)) {
-          Write-Error "Virtual environment not created properly!"
-          Get-ChildItem -Recurse .\.venv
-          exit 1
-        }
+      - name: Install dependencies
+        shell: pwsh
+        run: |
+          python -m venv .venv
+          .\.venv\Scripts\Activate.ps1
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
 
-    - name: Install dependencies
-      shell: pwsh
-      run: |
-        .\.venv\Scripts\python -m pip install --upgrade pip
-        .\.venv\Scripts\pip install -r requirements.txt
+      - name: Debug
+        shell: pwsh
+        run: |
+          .\.venv\Scripts\Activate.ps1
+          echo "Installed packages:"
+          python -m pip list
 
-    - name: Add venv to system PATH
-      shell: pwsh
-      run: |
-        $venvPath = "$env:GITHUB_WORKSPACE\.venv\Scripts"
-        # Permanent PATH update for all subsequent steps
-        echo "$venvPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        # Immediate PATH update for current step
-        $env:PATH = "$venvPath;$env:PATH"
-
-    - name: Verify PATH contains venv
-      shell: pwsh
-      run: |
-        Write-Host "Current PATH: $env:PATH"
-        where.exe flake8
-        where.exe pytest
-
-    - name: Run Linter
-      run: |
-        flake8 src tests
-
-    - name: Run Tests
-      run: |
-        pytest --maxfail=1 --disable-warnings
+      - name: Run tests
+        shell: pwsh
+        run: |
+          .\.venv\Scripts\Activate.ps1
+          python -m pytest --maxfail=1 --disable-warnings -q
